views qui vont de page en page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,11 @@ spring.datasource.tomcat.max-idle = 10
 spring.datasource.tomcat.max-wait = 8000
 spring.jpa.hibernate.ddl-auto= update
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
+spring.security.user.name=emi
+spring.security.user.password=emilie
 #logging.level.root= WARN
 #logging.level.com.emilie=INFO
 #to change the level of log
-#putting off line 4 make appear much more when building in the console
+#puting off line 4 make appear much more when building in the console
