--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,20 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>at.favre.lib</groupId>
+			<artifactId>bcrypt</artifactId>
+			<version>0.9.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
@@ -97,5 +110,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
