--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,13 @@
 			<version>0.9.0</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
 		</dependency>
 
 	</dependencies>
