--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,21 @@
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.mvc.view.suffix=.jsp
-
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/climbingfriends7?serverTimezone=UTC 
-spring.datasource.username = root
-spring.datasource.password = Mishka
-spring.datasource.tomcat.testOnBorrow = true
-spring.datasource.tomcat.testWhileIdle = true
-spring.datasource.tomcat.timeBetweenEvictionRunsMillis = 60000
-spring.datasource.tomcat.minEvictableIdleTimeMillis = 30000
-spring.datasource.tomcat.validationQuery = SELECT 1
-spring.datasource.tomcat.max-active = 15
-spring.datasource.tomcat.max-idle = 10
-spring.datasource.tomcat.max-wait = 8000
-spring.jpa.hibernate.ddl-auto= update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/climbingfriends7?serverTimezone=UTC 
+spring.datasource.username=root
+spring.datasource.password=Mishka
+spring.datasource.tomcat.testOnBorrow=true
+spring.datasource.tomcat.testWhileIdle=true
+spring.datasource.tomcat.timeBetweenEvictionRunsMillis=60000
+spring.datasource.tomcat.minEvictableIdleTimeMillis=30000
+spring.datasource.tomcat.validationQuery=SELECT 1
+spring.datasource.tomcat.max-active=15
+spring.datasource.tomcat.max-idle=10
+spring.datasource.tomcat.max-wait=8000
+spring.jpa.hibernate.ddl-auto=update
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=604800
 spring.security.user.name=emi
 spring.security.user.password=emilie
-#logging.level.root= WARN
-#logging.level.com.emilie=INFO
-#to change the level of log
-#puting off line 4 make appear much more when building in the console
+
