--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,13 @@
         <version>2.3.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>com.emilie</groupId>
     <artifactId>ClimbingWebApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>ClimbingWebApp</name>
-    <description>a spring boot web application</description>
+    <description>A Communitary Climbing Web Application </description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -124,7 +125,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.4.RELEASE</version>
+                <version>2.4.0</version>
+                <configuration>
+                    <mainClass>com.emilie.ClimbingWebApp.ClimbingWebAppApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!-- Packaging JAR -->
             <plugin>
